trying to fix clipping

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -16,12 +16,12 @@
   z-index: 1;
   text-align: center;
   color:#FFF;
-  position: static;
+  position: absolute;
   top: 40%;
   left: 50%;
   margin: 0 auto;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -100%);
+  transform: translate(-50%, -100%);
 
   width: 90%;
   max-width: 750px;
